--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="box">
       <div class="my-Font">致：都被发哦违反我发我富婆啊我发</div>
       <p></p>
-      <div class="audio">
+      <div class="audi">
         <audio
           src="birthday.mp3"
           id="aud"
