--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>生日快乐</title>
   </head>
   <style>
+    html,
+    body {
+      padding: 0;
+      margin: 0;
+      font-family: "myFont";
+    }
     @font-face {
       font-family: "myFont";
-      src: url("文鼎习字体.ttf") format("truetype");
+      src: url("C:\Users\HB\Desktop\web\birthday\文鼎习字体.ttf")
+        format("truetype");
       font-weight: 600;
       font-style: normal;
     }
@@ -44,7 +51,7 @@
       hyphens: auto;
       text-align: justify;
       color: #333;
-      font-size: 17px;
+      font-size: 20px;
       line-height: 1.7;
       letter-spacing: 0.034em;
       font-family: "DFKai-SB";
@@ -53,11 +60,23 @@
     .box::-webkit-scrollbar {
       display: none; /* Chrome Safari */
     }
+    .ps {
+      font-size: 10px;
+      color: #feac5e;
+    }
   </style>
   <body>
     <div class="box">
-      <div class="my-Font">致：都被发哦违反我发我富婆啊我发</div>
-      <p></p>
+      <div class="my-font">
+        亲爱的雷乐乐乐乐乐乐： <br />
+        &emsp;&emsp;祝你生日快乐乐乐乐乐乐乐乐乐乐乐乐乐乐乐乐乐乐乐乐<br />
+        <br />
+        &emsp;&emsp;愿你：执着于理想，纯粹于当下。<br />
+        &emsp;&emsp;<br /><br />
+      </div>
+      <div class="ps">ps:不是很会说祝福的话，给你准备了小烟花</div>
+      <a href="https://aichibi.github.io/mine/">🎆🎆🎆🎆</a>
+
       <div class="audi">
         <audio
           src="birthday.mp3"
