--- a/index.html
+++ b/index.html
@@ -67,17 +67,25 @@
   </style>
   <body>
     <div class="box">
-      <div class="my-font">
-        亲爱的雷乐乐乐乐乐乐： <br />
-        &emsp;&emsp;祝你生日快乐乐乐乐乐乐乐乐乐乐乐乐乐乐乐乐乐乐乐乐<br />
-        <br />
-        &emsp;&emsp;愿你：执着于理想，纯粹于当下。<br />
-        &emsp;&emsp;<br /><br />
+        ps: <br>1.这首歌是李雪莱的《生日快乐》，我五音不全就不献丑了(u‿ฺu)
+        <br>2.这个页面我也加了背景音乐，希望不会吓到你。
+        <br>3.我没什么可以送你，<br> &nbsp;&ensp;只能送你一段时间，一段好意，一段生命。
+        <br>4.我在想你。你在想我。 
+        <br>&nbsp;&ensp;我在想“你在想我”的景象。
+        <br>&nbsp;&ensp;想到你会因为我不在你身边而惆怅，
+        <br>&nbsp;&ensp;想到你会心神不安而蹙起眉头，
+        <br>&nbsp;&ensp;我的心也会因为想象到“你惆怅的思念”而微微颤动。
+        <br>&nbsp;&ensp;当我想到“你在想我”的时候，我的心弦似乎也被撩动。
+        <br>&nbsp;&ensp;你这个时候在做什么呢？有在想我吗？
+        <br>&nbsp;&ensp;可能有，也可能没有。可能在上课、睡觉、或是玩耍。
+        <br>&nbsp;&ensp;但“你在想我”这件事，终究并不是一件有很大可能的事。
+        <br>&nbsp;&ensp;所以，我仅仅是想象到“你在想我”，就很有感动。
+        <br>&nbsp;&ensp;我的感动，似乎不需要你真实的参与，也能体会到。<br>&nbsp;&ensp;我因为自己的想象而大有触动，我是在自我感动吗？
+        <br>&nbsp;&ensp;好像是的，也就是这样，我忽然明白，<br> &nbsp;&ensp;什么叫做：我喜欢你，但与你无关。<br/>
+        5.虽然但是，平常想找你聊天的时候点开和你的聊天框，却又不会和你聊，停一会又会退出去，很奇怪(*´I`*)
       </div>
-      <div class="ps">ps:不是很会说祝福的话，给你准备了小烟花</div>
-      <a href="https://aichibi.github.io/mine/">🎆🎆🎆🎆</a>
 
-      <div class="audi">
+      <div class="audio">
         <audio
           src="birthday.mp3"
           id="aud"
