--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>生日快乐</title>
+    <title>蛋的奇怪空间</title>
   </head>
   <style>
     html,
@@ -58,43 +58,40 @@
       overflow-y: scroll;
     }
     .box::-webkit-scrollbar {
-      display: none; /* Chrome Safari */
+      display: none;
     }
     .ps {
       font-size: 10px;
       color: #feac5e;
     }
+    .breakword {
+      word-wrap: break-word;
+    }
+    .p1{
+      font-size: small;
+    }
   </style>
   <body>
-    <div class="box">
-        ps: <br>1.这首歌是李雪莱的《生日快乐》，我五音不全就不献丑了(u‿ฺu)
-        <br>2.我没什么可以送你，<br> &nbsp;&ensp;只能送你一段时间，一段好意，一段生命。
-        <br>3.我在想你。你在想我。 
-        <br>&nbsp;&ensp;我在想“你在想我”的景象。
-        <br>&nbsp;&ensp;想到你会因为我不在你身边而惆怅，
-        <br>&nbsp;&ensp;想到你会心神不安而蹙起眉头，
-        <br>&nbsp;&ensp;我的心也会因为想象到“你惆怅的思念”而微微颤动。
-        <br>&nbsp;&ensp;当我想到“你在想我”的时候，我的心弦似乎也被撩动。
-        <br>&nbsp;&ensp;你这个时候在做什么呢？有在想我吗？
-        <br>&nbsp;&ensp;可能有，也可能没有。可能在上课、睡觉、或是玩耍。
-        <br>&nbsp;&ensp;但“你在想我”这件事，终究并不是一件有很大可能的事。
-        <br>&nbsp;&ensp;所以，我仅仅是想象到“你在想我”，就很有感动。
-        <br>&nbsp;&ensp;我的感动，似乎不需要你真实的参与，也能体会到。<br>&nbsp;&ensp;我因为自己的想象而大有触动，我是在自我感动吗？
-        <br>&nbsp;&ensp;好像是的，也就是这样，我忽然明白，<br> &nbsp;&ensp;什么叫做：我喜欢你，但与你无关。<br/>
-        4.虽然但是，平常想找你聊天的时候点开和你的聊天框，却又不会和你聊，停一会又会退出去，很奇怪(*´I`*)
-      </div>
-
-      <div class="audio">
-        <audio
-          src="birthday.mp3"
-          id="aud"
-          autoplay="autoplay"
-          controls="auto"
-          loop="true"
-          preload="auto"
-        ></audio>
-      </div>
-      <p></p>
+    <div class="box break-word">
+      <p>
+        没想到吧，这个网页我有在放一些奇奇怪怪的内容。<br />哈哈哈哈哈哈哈哈哈暂时的想法是发一些我的小的想法<br />
+        前几天在想着做一个可以留言的网站，只有你和我，可以记录一些平时不会直接说的话(差不多这个意思)。但是我发现github(就是我用来上传网页的这个平台)，他只能做静态网站，就是只能展示，不能交互。要做交互的话得租专门的域名➕网关备案，有点小硬核。就放弃了。后面看到一些恋爱软件也有这些功能，在考虑用哪个(
+        ･_･)<br />
+        还有其他的想法是，我把这个网页的上传方法交给你，你和我都可以在这个网页上传内容。但是目前这个我用来放内容的网页有点简陋。等到寒假，我再做一个新的网页，再去考虑这个项目吧<br />
+        嘶，应该在每一段后面标一个时间的，而不是单纯的空开。<br />
+        可能是我没学到的地方，这个换行真的好麻烦，它不能在我想换的地方换，有些得手动换行(･ˇ_ˇ･)
+        <br />今天的那句always by your side真的好暖，宝贝好温柔。TWT
+        <br />在奇奇怪怪的点开始烦躁，觉得时间过得太慢，又觉得时间不够用。
+        <br />更新了一下网站，现在它可以自己换行啦，也可以自适应页面的大小了。2022/12/20<p class="p1">（虽然早早说要标时间蛋一直没有标）</p>
+        <br/>好喜欢宝贝
+        <br/>
+        <br/>分手好多天了，五一期间硬着头皮找你聊天，总觉得好像哪里怪怪的，可能还是我小心思在作祟吧。<br />
+        <br/>看到你朋友圈去了北京，见了喜欢的偶像，很开心能够分享你的喜悦。<br />
+        <br/>看到你回我朋友圈，我好开心，心脏怦怦的跳，打开你的聊天框，又不知道说些什么。<br />
+        <br/>总想着不甘心我们的关系就此结束，可是也不知道该怎么办，要找你继续去聊吗。。。。。。不得行的。好纠结。<br />
+        <br/>上一条朋友圈只是你不小心评论的吗，为什么后面那条朋友圈你甚至都没有点赞。。。<br />
+        <br/>我好烦。<br />
+      </p>
     </div>
   </body>
 </html>
